# Ci-cd-v2

./: Project_Report.docx  docker-compose.yml  generate_report.py  railway.toml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py  websocket.py
backend/src/creator/: analyzer.py  detector.py  goal_parser.py  llm_generator.py  test_goal_parser.py
backend/src/creator/templates/: deploy_commands.py  go.py  java.py  nodejs.py  python_tmpl.py  rust.py
backend/src/db/: models.py  repository.py  session.py
backend/src/executor/: artifact_store.py  cloud_adapters.py  dispatcher.py  error_patterns.py  port_utils.py  replanner.py  scheduler.py  test_artifact_store.py  test_cloud_adapters.py  test_error_patterns.py  test_phase2_integration.py  test_phase3_integration.py
backend/src/executor/agents/: base.py  build_agent.py  deploy_agent.py  security_agent.py  test_agent.py  verify_agent.py
backend/src/models/: messages.py  pipeline.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_repository.py  test_websocket.py
backend/tests/unit/: test_dag_scheduler.py  test_dispatcher.py  test_error_patterns.py  test_goal_parser.py  test_models.py  test_replanner.py
demo-apps/go-echo/: go.mod  main.go
demo-apps/java-quarkus/: pom.xml
demo-apps/nodejs-express/: app.js  package.json
e2e/: playwright.config.ts
frontend/: .env.production  nginx.conf  package-lock.json  package.json  tailwind.config.js  test_dag.js  vite.config.ts
scripts/: test_orchestrator.py  verify_orchestrator_fixes.py
(+42 files in other folders)
